--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 html, body {
 
     margin: 0;
-    background-color: #18161d;
+    background-color: #F2EFF5;
 }
 
 .logo{
     position: absolute;
     left: 50%;
-    top: 45%;
+    top: 50%;
     display: block;
-    width: 300px;
-    height: 51px;
-    margin: -25px 0 0 -150px;
+    width: 238.9px;
+    height: 31.7px;
+    margin: -15.5px 0 0 -119.5px ;
 }
 
 @media (max-width: 480px) {
