--- a/style.css
+++ b/style.css
@@ -1,25 +1,41 @@
 html, body {
     margin: 0;
-    background-color: #F2EFF5;
 }
 
-
-.logo{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    display: block;
-    width: 300px;
-    height: 39.8px;
-    margin: -19.9px 0 0 -150px ;
+.logo {
+    margin: 32px 0 0 32px;
+    width: 303px;
+    height: auto;
 }
 
 @media (max-width: 480px) {
-   
-.logo{
-    width: 200px;
-    height: 34px;
-    margin: -17px 0 0 -100px;
+.logo {
+    width: 128px;
+    height: auto;
+    }
 }
 
+.sig {
+    position: absolute;
+    display: block;
+    width: 196px;
+    height: 29px;
+    bottom: 32px;
+    left: 32px;
 }
+
+.bgimg {
+    overflow: hidden;
+}
+
+img {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: 100%;
+    object-fit: cover;
+    height: auto;
+    z-index: -9999999;
+  }
