--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ section {
 .intro {
     width: 100%;
     height: 100%;
-     background: none;
+    background: none;
 
 }
 
@@ -55,14 +55,20 @@ video {
   z-index: -10000;
 }
 
+/*
 @media (max-width: 1014px) {
   video {
-  object-fit: cover;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -10000;
-}
-}
+    object-fit: cover;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -10000;
+    display: none;
+    }
+    
+    .intro{
+        background: url(../img/video_bg.jpg)no-repeat center center;
+    }
+}*/
