--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ video {
   object-fit: cover;
   width: 100vw;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: -10000;
