--- a/css/style.css
+++ b/css/style.css
@@ -54,9 +54,11 @@ a {
 
 /*GLOBALS*/
 
+
+
 body,
 html {
-    height: 100%;
+    padding: 0;
     margin: 0;
     font-family: helvetica, arial, sans-serif;
     font-weight: 100;
@@ -66,13 +68,10 @@ html {
     -moz-osx-font-smoothing: grayscale;
 }
 
-body {
-    background-color: #F0EDEA;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-}
 
+section {
+    background-color: #F0EDEA;
+}
 
 /*Header Content*/
 
@@ -94,9 +93,10 @@ body {
 
 
 .intro {
-    width: 100%;
-    height: 100%;
-    background: none;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
 }
 
 
@@ -109,6 +109,7 @@ body {
     width: 100%;
     bottom: 0;
     overflow: auto;
+
 }
 
 .intro_text H2 {
@@ -171,6 +172,7 @@ video {
     top: 0;
     left: 0;
     z-index: -10000;
+
 }
 
 /*DEMO*/
@@ -220,7 +222,7 @@ video {
     .right {
         width: 50%;
         float: right;
-        height: 600px;
+        height: auto;
     }
 
     .demo_desc {
@@ -245,6 +247,7 @@ iframe {
     margin: 0;
     padding: 0;
     pointer-events: none;
+
 }
 
 @media (min-width: 768px) {
